FUCKING changes to navbar of which it is fucking

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <ul>
             <div id="navLeft">
             <li><a href="index.html">Home</a></li>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href=>Projects</a></li>
             </div>
             <div id="navRight">
-            <li><a href="Projects.html">Projects</a></li>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href=>Projects</a></li>
+            <li><a href=>Projects</a></li>
             </div>
         </ul>
     </nav>
