MADE CHANGES THAT ARE COOL PROBABLY

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="eye">
+        <img id="eyeball" src="img/eyeball.png">
+        <img id="eyeTrans" src="img/eyeTrans.png">
+    </div>
     <nav class="navbar">
         <ul>
-            <div id="navLeft">
+            <div class="navItem" id="navLeft">
             <li><a href="index.html">Home</a></li>
-            <li><a href=>Projects</a></li>
             </div>
-            <div id="navRight">
-            <li><a href=>Projects</a></li>
-            <li><a href=>Projects</a></li>
+            <div class="navItem" id="navRight">
+            <li><a href=>More</a></li>
             </div>
         </ul>
     </nav>
