--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </nav>
 
     <main>
-        <h3>Hello, I'm gaming</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam minus eveniet recusandae dicta similique numquam voluptas quos tempore cupiditate pariatur, laudantium fugit alias quia veritatis nesciunt quaerat molestias adipisci assumenda.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam minus eveniet recusandae dicta similique numquam voluptas quos tempore cupiditate pariatur, laudantium fugit alias quia veritatis nesciunt quaerat molestias adipisci assumenda.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam minus eveniet recusandae dicta similique numquam voluptas quos tempore cupiditate pariatur, laudantium fugit alias quia veritatis nesciunt quaerat molestias adipisci assumenda.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam minus eveniet recusandae dicta similique numquam voluptas quos tempore cupiditate pariatur, laudantium fugit alias quia veritatis nesciunt quaerat molestias adipisci assumenda.
-        </p>
+        <h3>Hello,n hih jih bji  ibjuoi</h3>
+        <pre>
+            ░█░█░█▀▀░█░░░█░░░█▀█  ░█░█░█▀█░█▀▄░█░░░█▀▄░█
+            ░█▀█░█▀▀░█░░░█░░░█░█  ░█▄█░█░█░█▀▄░█░░░█░█░▀
+            ░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀  ░▀░▀░▀▀▀░▀░▀░▀▀▀░▀▀░░▀
+        </pre>
     </main>
 </body>
 </html>
