--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     
 </head>
 <body>
-    <script src="javascript.js"></script>
     <div id="eye">
         <img id="eyeball" src="img/eyeball.png">
         <img id="eyeTrans" src="img/eyeTrans.png">
@@ -20,7 +19,7 @@
     <nav class="navbar">
         <ul>
             <div class="navItem" id="navLeft">
-            <li><a href="index.html">Home</a></li>
+            <li><a onclick="functionGaming()">Home</a></li>
             </div>
             <div class="navItem" id="navRight">
             <li><a href=>More</a></li>
@@ -35,6 +34,9 @@
             ░█▀█░█▀▀░█░░░█░░░█░█  ░█▄█░█░█░█▀▄░█░░░█░█░▀
             ░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀  ░▀░▀░▀▀▀░▀░▀░▀▀▀░▀▀░░▀
         </pre>
+
+        <input type="text" size="40" onkeydown="myFunction(event)">
+    <script src="javascript.js"></script>
     </main>
 </body>
 </html>
