--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     
 </head>
 <body>
-    
     <div id="eye">
         <img id="eyeball" src="img/eyeball.png">
         <img id="eyeTrans" src="img/eyeTrans.png">
@@ -20,7 +19,7 @@
     <nav class="navbar">
         <ul>
             <div class="navItem" id="navLeft">
-            <li><a onclick="functionGaming()">Home</a></li>
+            <li><a href=>Home</a></li>
             </div>
             <div class="navItem" id="navRight">
             <li><a href=>More</a></li>
